# consigne

./: .gitignore  README.md  docker-compose.yaml
api/: Dockerfile  README.md  asgi.py  boot.sh  configs.yaml  database.db  pyproject.toml  schema.sql
api/database/: init.sh  psql_schema.sql  schema.sql
api/src/: banner  cache.py  database.py  engine.py  exceptions.py  listeners.py  loaders.py  main.py  middlewares.py  odoo.py  parsers.py  routes.py  schema.py  ticket.py  utils.py
api/src/scripts/: __init__.py  set_consigne_products.py
front/: Dockerfile  index.html  package.json  pnpm-lock.yaml
front/src/: App.vue  Deposits.vue  Login.vue  ReceiverSelection.vue  main.ts
front/src/assets/: main.css
front/src/components/: HelloWorld.vue  SearchUser.vue  ShiftUsers.vue  UserCard.vue
front/src/services/: api.utils.ts  authentication.ts  deposit.ts  state.ts  users.ts
