[project]
name = "api"
version = "0.5.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.1.0",
    "erppeek>=1.7.1",
    "pillow==9.5.0",
    "python-barcode>=0.15.1",
    "python-escpos>=3.1",
    "pyusb>=1.3.1",
    "sanic>=24.12.0",
    "sanic-ext>=23.12.0",
    "sqlalchemy>=2.0.39",
]

[tool.commitizen]
version = "0.5.1"
version_files = [
    "pyproject.toml:^version",
    "src/VERSION"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--no-header -l --cov app -m 'not running_server'"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
